# qpt_2_workbench

./: .gitignore  README.md  app.js  cli-exec.js  cli.js  index.html  package-lock.json  package.json  qpt-core.js  qpt-data.js  server-functions.js  server-jobs.js  server-log.js  server-settings.js  server-skills.js  server-store.js  server.js  styles.css
data/skills/board-health-report/: SKILL.md
data/skills/dialectic-moderator/: SKILL.md
data/skills/grounding-protocol/: SKILL.md
data/skills/minimum-dissolution/: SKILL.md
data/skills/sim-authoring/: SKILL.md
data/skills/skill-generator/: SKILL.md
data/skills/socratic-gate/: SKILL.md
rust_ui/: .gitignore  Cargo.toml  README.md
rust_ui/assets/: boards.json
rust_ui/data/: store.json
rust_ui/data/skills/gate-triage/: SKILL.md
rust_ui/data/skills/hello/: SKILL.md
rust_ui/data/skills/living-naming/: SKILL.md
rust_ui/data/skills/promotion-paths/: SKILL.md
rust_ui/data/skills/qpt-spec-lookup/: SKILL.md
rust_ui/data/skills/store-backup/: SKILL.md
rust_ui/public/: qpt-core.js
rust_ui/src/: agent.rs  cli_exec.rs  core.rs  data.rs  functions.rs  http.rs  jobs.rs  lib.rs  log.rs  main.rs  settings.rs  skills.rs  store.rs
rust_ui/tests/: api_tests.rs  core_tests.rs  parity.mjs
